# ANTLR-BFG-Converter

./: README.md  requirements.txt  setup.cfg
src/ANTLR_BGF_converter/: ANTLR_to_FBG.py  BGF_to_FBL.py  FBG_to_ANTLR.py  FBG_to_BGF.py  base.py  converter.py
