[metadata]
name = ANTLR_BGF_converter
version = 1.0
description = Converter for ANTLR an BGF in to a pivot language
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src